<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".RegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/back"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/usernameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/backButton"
            android:layout_marginTop="16dp"
            android:hint="@string/username"
            android:autofillHints="username"
            android:inputType="text" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/usernameEditText"
            android:layout_marginTop="16dp"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/retypePasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/passwordEditText"
            android:layout_marginTop="16dp"
            android:inputType="textPassword"
            android:hint="@string/retype_password"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/retypePasswordEditText"
            android:layout_marginTop="16dp"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:autofillHints="emailAddress" />

        <EditText
            android:id="@+id/phoneEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/emailEditText"
            android:layout_marginTop="16dp"
            android:inputType="phone"
            android:hint="@string/phone_number"
            android:autofillHints="phone" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/phoneEditText"
            android:layout_marginTop="16dp"
            android:text="@string/register" />

    </RelativeLayout>

</LinearLayout>
