<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="#77DCD2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/usernameText"
            android:layout_width="180dp"
            android:layout_height="34dp"
            android:text="@string/username"
            android:textColor="#FDFDFD"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.549"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.948" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/divider2"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:layout_constraintVertical_bias="0.058" />

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="511dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="98dp"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/emailText"
                android:layout_width="298dp"
                android:layout_height="32dp"
                android:ems="10"
                android:text="@string/email"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.772"
                app:layout_constraintStart_toEndOf="@+id/emailTextView"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.487" />

            <TextView
                android:id="@+id/emailTextView"
                android:layout_width="85dp"
                android:layout_height="54dp"
                android:layout_marginStart="4dp"
                android:text="@string/email"
                android:textSize="28sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.555" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="98dp">

            <TextView
                android:id="@+id/phoneText"
                android:layout_width="298dp"
                android:layout_height="32dp"
                android:ems="10"
                android:text="@string/phone_number"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.681"
                app:layout_constraintStart_toEndOf="@+id/phoneTextView"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.504" />

            <TextView
                android:id="@+id/phoneTextView"
                android:layout_width="85dp"
                android:layout_height="54dp"
                android:layout_marginStart="4dp"
                android:text="@string/phone_number"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.555" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/updateButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="#98E1DA"
            android:text="@string/update_profile" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/changePassword"
            android:layout_margin="10dp"
            android:backgroundTint="#98E1DA"
            android:text="@string/change_password"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>